--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lqip-modern": "^1.2.0",
     "next": "^11.1.2",
     "node-fetch": "^2.6.1",
+    "notion": "^0.0.1",
     "notion-client": "^4.10.0",
     "notion-types": "^4.10.0",
     "notion-utils": "^4.10.0",
